cfn/core.yml
AWSTemplateFormatVersion: 2010-09-09
Description: "Deploys a single PostgreSQL RDS instance, SNS Topic and SNS Subscription."
Parameters:
  AppName:
    Type: String
    Default: "building-permits-aws-pipeline"
  VpcCIDR:
    Type: String
    Default: "10.0.0.0/24"
    AllowedPattern: "((\\d{1,3})\\.){3}\\d{1,3}/\\d{1,2}"
  DBMasterSubnetCIDR:
    Description: IP range (CIDR notation) for the subnet in the RDS Master Availability Zone
    Type: String
    Default: "10.0.0.0/28"
    AllowedPattern: "((\\d{1,3})\\.){3}\\d{1,3}/\\d{1,2}"
  DBReplicaSubnetCIDR:
    Description: IP range (CIDR notation) for the subnet in the RDS Master Availability Zone
    Type: String
    Default: "10.0.0.16/28"
    AllowedPattern: "((\\d{1,3})\\.){3}\\d{1,3}/\\d{1,2}"
  DBInstanceIdentifier:
    Type: String
    Default: "permits-rds-instance-9-vpc"
  DBEngine:
    Type: String
    Default: "postgres"
  DBEngineVersion:
    Type: String
    Default: "11.6"
  DBInstanceClass:
    Type: String
    Default: "db.t2.micro"
  DBStorageType:
    Type: String
    Default: "gp2"
  DBAllocatedStorage:
    Type: Number
    Default: 20
  DBName:
    Type: String
    Default: '{{resolve:ssm:/permits/db_name:1}}'
  DBUser:
    Type: String
    Default: '{{resolve:ssm:/permits/db_user:1}}'
  DBPassword:
    Type: String
    Default: '{{resolve:ssm-secure:/permits/db_password:1}}'
    NoEcho: True
  # DBAlertPhoneNumber:
  #   Type: String
  #   Default: '{{resolve:ssm:/permits/alert_phone:1}}'
  # DBAlertEmail:
  #   Type: String
  #   Default: '{{resolve:ssm:/permits/alert_email:1}}'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: App
          Value: !Ref AppName
  DBMasterSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref DBMasterSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
      - Key: App
        Value: !Ref AppName
  DBReplicaSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref DBReplicaSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
      - Key: App
        Value: !Ref AppName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: App
          Value: !Ref AppName
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: App
          Value: !Ref AppName
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  DBMasterSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBMasterSubnet
      RouteTableId: !Ref PublicRouteTable
  VpcDefaultSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      GroupId: !GetAtt VPC.DefaultSecurityGroup
      CidrIp: 0.0.0.0/0
      FromPort: 5432
      ToPort: 5432
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: DBSubnetGroup for RDS instances
      SubnetIds:
        - !Ref DBMasterSubnet
        - !Ref DBReplicaSubnet
  PermitsDB:
    Type: AWS::RDS::DBInstance
    DependsOn: InternetGatewayAttachment
    Properties:
      DBInstanceIdentifier: !Ref DBInstanceIdentifier
      DBName: !Ref DBName
      AllocatedStorage: !Ref DBAllocatedStorage
      DBInstanceClass: !Ref DBInstanceClass
      StorageType: !Ref DBStorageType
      Engine: !Ref DBEngine
      EngineVersion: !Ref DBEngineVersion
      MasterUsername: !Ref DBUser
      MasterUserPassword: !Ref DBPassword
      PubliclyAccessible: true
      VPCSecurityGroups:
        - !GetAtt VPC.DefaultSecurityGroup
      DBSubnetGroupName: !Ref DBSubnetGroup      
      Tags:
        - Key: App
          Value: !Ref AppName
  # BuildingPermitsSNSTopic:
  #   Type: AWS::SNS::Topic
  #   Properties:
  #     Subscription:
  #       - Endpoint: !Ref DBAlertPhoneNumber
  #         Protocol: sms
  #       - Endpoint: !Ref DBAlertEmail
  #         Protocol: email
  #     TopicName: "BuildingPermitsRDSAlertTopic"
  #     Tags:
  #       - Key: App
  #         Value: !Ref AppName
  # BuildingPermitsEventSubscription:
  #   Type: AWS::RDS::EventSubscription
  #   Properties:
  #     Enabled: true
  #     EventCategories:
  #       - availability
  #       - configuration change
  #       - creation
  #       - deletion
  #       - failover
  #       - failure
  #       - recovery
  #       - notification
  #       - maintenance
  #       - backup
  #     SnsTopicArn: !Ref BuildingPermitsSNSTopic
  #     SourceType: db-instance
  #     SourceIds: 
  #       - !Ref DBInstanceIdentifier
Outputs:
  EndpointDB:
    Description: "Endpoint of the newly created Permits RDS instance"
    Value: !GetAtt PermitsDB.Endpoint.Address
  PortDB:
    Description: "Port of the newly created Permits RDS instance"
    Value: !GetAtt PermitsDB.Endpoint.Port
